--- a/pwa/training/training.css
+++ b/pwa/training/training.css
@@ -31,27 +31,40 @@ body .all-content {
   margin: 0 auto;
   text-align: center;
 }
-body div.desc {
-  margin: 0 auto 1.5rem;
-  padding: 0;
-  width: 98%;
-}
-  p {
-    line-height: 1.5;
-  }
-  h1,
-  h2,
-  h3,
-  .h3,
-  h4,
-  .h4 {
-    font-weight: normal;
-    margin: 0 auto;
+  body div.desc {
+    margin: 0 auto 1.5rem;
     padding: 0;
+    width: 98%;
   }
+
+img,
+embed,
+object,
+video {
+  max-width: 100%;
+}
+p {
+  line-height: 1.5;
+}
+h1,
+h2,
+h3,
+.h3,
+h4,
+.h4 {
+  font-weight: normal;
+  margin: 0 auto;
+  padding: 0;
+}
   h1 {
     display: inline-block;
     font-weight: bold;
+  }
+  h2,
+  .h2 {
+    line-height: 1.3;
+    margin: 0 auto 1em;
+    max-width: 500px;
   }
   h3,
   .h3 {
@@ -66,7 +79,6 @@ body div.desc {
     margin: 1em auto 0;
     text-align: center;
   }
-
 a {
   color: #004c6a;
   font-size: 14px;
