--- a/pwa/training/training.css
+++ b/pwa/training/training.css
@@ -63,7 +63,7 @@ h4,
   h2,
   .h2 {
     line-height: 1.3;
-    margin: 0 auto 1em;
+    margin: 0.35em auto 0.2em;
     max-width: 500px;
   }
   h3,
@@ -581,7 +581,7 @@ main.main {
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 2rem auto 0;
-  padding: 0.75rem 0.5rem 1.5rem;
+  padding: 1.25rem 0.5rem 0.75rem;
   position: relative;
   transition: all 2s;
 }
