--- a/pwa/training/training.css
+++ b/pwa/training/training.css
@@ -27,7 +27,7 @@ body {
   padding: 0 15px;
 }
 body .all-content {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0 auto;
   text-align: center;
 }
